# batch-allow-fail-demo

./: .gitignore  Cargo.toml  README.md  main.rs  package-lock.json
src/: BytesErrorBitmap.sol
test/: BytesErrorBitmap.t.sol
utils/: Cargo.toml  main.rs
